--- a/user.html
+++ b/user.html
@@ -132,7 +132,7 @@
          <li><a class="" href="/tomarAsistencia.html">Control de Asistencia</a></li>
          <li><a href="reporteAsistenciasAdmi.html">Reporte de asistencia</a></li>
         </ul> 
-        <ul class="sub-menu"  id="subMenuPadre">
+        <ul class="sub-menu"  id="subMenuPadreAsis">
           <li><a href="reporteAsistenciasTutor.html">Reporte de asistencia</a></li>
          </ul> 
        </li>
@@ -153,7 +153,7 @@
     <li>
     <div class="profile-details">
       <div class="profile-content">
-        <img src="asset/home-user/avatar.jpg" alt="">
+        <img id="fotoPerfil" src="" alt="user">
       </div>
       <div class="name-rol">
         <div  ><span class="nombre" id="nombre-user"></span></div>
@@ -281,7 +281,7 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="/js/menuLateral.js"></script>
-<script src="/js/userHome.js"></script> 
+<!-- <script src="/js/userHome.js"></script>  -->
 
 
 
