--- a/añadirCurso.html
+++ b/añadirCurso.html
@@ -106,7 +106,7 @@
       <div class="icon_link">
         <a href="/gestionCalificaciones.html">
           <i class='bx bx-edit'></i>
-          <span class="link_name">Notas</span>
+          <span class="link_name">Calificacion</span>
         </a>
         <i class='bx bxs-chevron-down arrow'></i>
       </div>
