--- a/gestionCurso.html
+++ b/gestionCurso.html
@@ -99,12 +99,12 @@
           <li><a href="gestionEstudiantes.html">Gestionar Estudiantes</a></li>
         </ul>
       </li>
-
+      
       <li id="btnNotas">
         <div class="icon_link">
           <a href="/gestionCalificaciones.html">
             <i class='bx bx-edit'></i>
-            <span class="link_name">Notas</span>
+            <span class="link_name">Calificacion</span>
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
