--- a/reporteAsistenciasAdmi.html
+++ b/reporteAsistenciasAdmi.html
@@ -102,25 +102,25 @@
       </ul>
     </li>
 
-    <li id="btnNotas">
-      <div class="icon_link">
-        <a href="/gestionCalificaciones.html">
-          <i class='bx bx-edit'></i>
-          <span class="link_name">Notas</span>
-        </a>
-        <i class='bx bxs-chevron-down arrow'></i>
-      </div>
-      <ul class="sub-menu" id="subMenuAdmi">
-        <li><a class="" href="/añadirCalificacion.html">Agregar Calificacion</a></li>
-        <li><a href="/gestionCalificaciones.html">Gestionar Calificacion</a></li>
+      <li id="btnNotas">
+        <div class="icon_link">
+          <a href="/gestionCalificaciones.html">
+            <i class='bx bx-edit'></i>
+            <span class="link_name">Calificacion</span>
+          </a>
+          <i class='bx bxs-chevron-down arrow'></i>
+        </div>
+        <ul class="sub-menu" id="subMenuAdmi">
+          <li><a class="" href="/añadirCalificacion.html">Agregar Calificacion</a></li>
+          <li><a href="/gestionCalificaciones.html">Gestionar Calificacion</a></li>
 
-      </ul>
-      <ul class="sub-menu" id="subMenuPadre">
+        </ul>
+        <ul class="sub-menu" id="subMenuPadre">
 
-        <li><a href="/reporteNotasTutor.html">Reporte de calificacion</a></li>
+          <li><a href="/reporteNotasTutor.html">Reporte de calificacion</a></li>
 
-      </ul>
-    </li>
+        </ul>
+      </li>
 
     <li id="btnAsistencia">
       <div class="icon_link">
