--- a/userHome.html
+++ b/userHome.html
@@ -100,7 +100,7 @@
         <div class="icon_link">
           <a href="/gestionCalificaciones.html">
             <i class='bx bx-edit'></i>
-            <span class="link_name">Notas</span>
+            <span class="link_name">Calificacion</span>
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
@@ -124,7 +124,7 @@
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
-        <ul class="sub-menu" id="subMenuAdmi">
+        <ul class="sub-menu" id="subMenuAdmiNotas">
           <li><a class="" href="/tomarAsistencia.html">Control de Asistencia</a></li>
           <li><a href="reporteAsistenciasAdmi.html">Reporte de asistencia</a></li>
         </ul>
