Agrego acta de convivencia soluciono problema de rol tutor

--- a/userHome.html
+++ b/userHome.html
@@ -20,7 +20,7 @@
 <body>
   <button class="toggle-sidebar-btn"><i class='bx bx-menu' id="abierto"></i>
     <i class='bx bx-x' id="cerrado" style="display: none;"></i></button>
-  <!-- Sidebar -->
+   <!-- Sidebar -->
   <div class="sidebar close ">
     <div class="logo">
       <img class="bxs-school" src="/asset/logoblanco.png">
@@ -104,12 +104,12 @@
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
-        <ul class="sub-menu" id="subMenuAdmiNotas">
+        <ul class="sub-menu" id="subMenuAdmiCalificacion">
           <li><a class="" href="/añadirCalificacion.html">Agregar Calificacion</a></li>
           <li><a href="/gestionCalificaciones.html">Gestionar Calificacion</a></li>
 
         </ul>
-        <ul class="sub-menu" id="subMenuPadre">
+        <ul class="sub-menu" id="subMenuPadreCalificacion">
 
           <li><a href="/reporteNotasTutor.html">Reporte de calificacion</a></li>
 
@@ -124,11 +124,11 @@
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
-        <ul class="sub-menu" id="subMenuAdmiNotas">
+        <ul class="sub-menu" id="subMenuAdmiAsistencia">
           <li><a class="" href="/tomarAsistencia.html">Control de Asistencia</a></li>
           <li><a href="reporteAsistenciasAdmi.html">Reporte de asistencia</a></li>
         </ul>
-        <ul class="sub-menu" id="subMenuPadreAsis">
+        <ul class="sub-menu" id="subMenuPadreAsistencia">
           <li><a href="reporteAsistenciasTutor.html">Reporte de asistencia</a></li>
         </ul>
       </li>
@@ -161,7 +161,6 @@
       </li>
     </ul>
   </div>
-
 
 
   <main class="home-section">
@@ -269,6 +268,19 @@
           </div>
         </div>
       </div>
+
+      <div class="col" id="contenedor-acta">
+        <div class="card-small h-100">
+          <img src="asset/home-user/202.png" />
+          <div class="contenedor-accion" id="acta">
+            <span>Consulta el acta de convivencia de la institución</span>
+            <a href="/actaConvivencia.html" class="boton-card ">Acta de convivencia</a>
+
+          </div>
+
+        </div>
+      </div>
+
 
       <div class="col" id="contenedor-notas">
         <div class="card-small h-100">
