--- a/gestionMaterias.html
+++ b/gestionMaterias.html
@@ -25,8 +25,8 @@
 
   <button class="toggle-sidebar-btn"><i class='bx bx-menu' id="abierto"></i>
     <i class='bx bx-x' id="cerrado" style="display: none;"></i></button>
-  <!-- Sidebar -->
-  <div class="sidebar close ">
+   <!-- Sidebar -->
+   <div class="sidebar close ">
     <div class="logo">
       <img class="bxs-school" src="/asset/logoblanco.png">
 
@@ -109,12 +109,12 @@
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
-        <ul class="sub-menu" id="subMenuAdmi">
+        <ul class="sub-menu" id="subMenuAdmiCalificacion">
           <li><a class="" href="/añadirCalificacion.html">Agregar Calificacion</a></li>
           <li><a href="/gestionCalificaciones.html">Gestionar Calificacion</a></li>
 
         </ul>
-        <ul class="sub-menu" id="subMenuPadre">
+        <ul class="sub-menu" id="subMenuPadreCalificacion">
 
           <li><a href="/reporteNotasTutor.html">Reporte de calificacion</a></li>
 
@@ -129,11 +129,11 @@
           </a>
           <i class='bx bxs-chevron-down arrow'></i>
         </div>
-        <ul class="sub-menu" id="subMenuAdmi">
+        <ul class="sub-menu" id="subMenuAdmiAsistencia">
           <li><a class="" href="/tomarAsistencia.html">Control de Asistencia</a></li>
           <li><a href="reporteAsistenciasAdmi.html">Reporte de asistencia</a></li>
         </ul>
-        <ul class="sub-menu" id="subMenuPadreAsis">
+        <ul class="sub-menu" id="subMenuPadreAsistencia">
           <li><a href="reporteAsistenciasTutor.html">Reporte de asistencia</a></li>
         </ul>
       </li>
