--- a/userHome.html
+++ b/userHome.html
@@ -98,7 +98,7 @@
 
       <li id="btnNotas">
         <div class="icon_link">
-          <a href="/gestionCalificaciones.html">
+          <a href="#">
             <i class='bx bx-edit'></i>
             <span class="link_name">Calificacion</span>
           </a>
