cambios en el nav de todas las paginas

--- a/admMateriaCurso.html
+++ b/admMateriaCurso.html
@@ -102,7 +102,7 @@
 
       <li id="btnNotas">
         <div class="icon_link">
-          <a href="/gestionCalificaciones.html">
+          <a href="#">
             <i class='bx bx-edit'></i>
             <span class="link_name">Calificacion</span>
           </a>
@@ -153,7 +153,7 @@
       <li>
         <div class="profile-details">
           <div class="profile-content">
-            <img id="fotoPerfil" src="" alt="user">
+            <img id="fotoPerfilMenu" src="" alt="user">
           </div>
           <div class="name-rol">
             <div><span class="nombre" id="nombre-user"></span></div>
