--- a/añadirCalificacion.html
+++ b/añadirCalificacion.html
@@ -26,7 +26,7 @@
 
     <button class="toggle-sidebar-btn"><i class='bx bx-menu' id="abierto"></i>
         <i class='bx bx-x' id="cerrado" style="display: none;"></i></button>
-     <!-- Sidebar -->
+    <!-- Sidebar -->
   <div class="sidebar close ">
     <div class="logo">
       <img class="bxs-school" src="/asset/logoblanco.png">
@@ -104,7 +104,7 @@
 
       <li id="btnNotas">
         <div class="icon_link">
-          <a href="/gestionCalificaciones.html">
+          <a href="#">
             <i class='bx bx-edit'></i>
             <span class="link_name">Calificacion</span>
           </a>
@@ -155,7 +155,7 @@
       <li>
         <div class="profile-details">
           <div class="profile-content">
-            <img id="fotoPerfil" src="" alt="user">
+            <img id="fotoPerfilMenu" src="" alt="user">
           </div>
           <div class="name-rol">
             <div><span class="nombre" id="nombre-user"></span></div>
@@ -167,6 +167,7 @@
       </li>
     </ul>
   </div>
+
     
     <main>
         <!-- Banner -->
@@ -197,7 +198,7 @@
         </div>
     </main>
     
-    <footer class="footer" id="footer" style="margin-top: 18%;">
+    <footer class="footer" id="footer" style="margin-top: 16% !important;">
         <div class="container">
             <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
         </div>
