--- a/añadirCurso.html
+++ b/añadirCurso.html
@@ -104,7 +104,7 @@
 
       <li id="btnNotas">
         <div class="icon_link">
-          <a href="/gestionCalificaciones.html">
+          <a href="#">
             <i class='bx bx-edit'></i>
             <span class="link_name">Calificacion</span>
           </a>
@@ -155,7 +155,7 @@
       <li>
         <div class="profile-details">
           <div class="profile-content">
-            <img id="fotoPerfil" src="" alt="user">
+            <img id="fotoPerfilMenu" src="" alt="user">
           </div>
           <div class="name-rol">
             <div><span class="nombre" id="nombre-user"></span></div>
@@ -196,7 +196,7 @@
 
 
   </main>
-  <footer class="footer" id="footer" style="margin-top: 17%;">
+  <footer class="footer" id="footer" style="margin-top: 16% !important;">
     <div class="container">
       <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
     </div>
