--- a/gestionCalificaciones.html
+++ b/gestionCalificaciones.html
@@ -24,7 +24,7 @@
 
     <button class="toggle-sidebar-btn"><i class='bx bx-menu' id="abierto"></i>
         <i class='bx bx-x' id="cerrado" style="display: none;"></i></button>
-     <!-- Sidebar -->
+    <!-- Sidebar -->
   <div class="sidebar close ">
     <div class="logo">
       <img class="bxs-school" src="/asset/logoblanco.png">
@@ -102,7 +102,7 @@
 
       <li id="btnNotas">
         <div class="icon_link">
-          <a href="/gestionCalificaciones.html">
+          <a href="#">
             <i class='bx bx-edit'></i>
             <span class="link_name">Calificacion</span>
           </a>
@@ -153,7 +153,7 @@
       <li>
         <div class="profile-details">
           <div class="profile-content">
-            <img id="fotoPerfil" src="" alt="user">
+            <img id="fotoPerfilMenu" src="" alt="user">
           </div>
           <div class="name-rol">
             <div><span class="nombre" id="nombre-user"></span></div>
@@ -165,7 +165,6 @@
       </li>
     </ul>
   </div>
-
 
 
     <main>
