--- a/notificacion.html
+++ b/notificacion.html
@@ -101,7 +101,7 @@
 
       <li id="btnNotas">
         <div class="icon_link">
-          <a href="/gestionCalificaciones.html">
+          <a href="#">
             <i class='bx bx-edit'></i>
             <span class="link_name">Calificacion</span>
           </a>
@@ -152,7 +152,7 @@
       <li>
         <div class="profile-details">
           <div class="profile-content">
-            <img id="fotoPerfil" src="" alt="user">
+            <img id="fotoPerfilMenu" src="" alt="user">
           </div>
           <div class="name-rol">
             <div><span class="nombre" id="nombre-user"></span></div>
@@ -164,7 +164,6 @@
       </li>
     </ul>
   </div>
-
 
 
 
