--- a/reporteAsistenciasAdmi.html
+++ b/reporteAsistenciasAdmi.html
@@ -155,7 +155,7 @@
       <li>
         <div class="profile-details">
           <div class="profile-content">
-            <img id="fotoPerfil" src="" alt="user">
+            <img id="fotoPerfilMenu" src="" alt="user">
           </div>
           <div class="name-rol">
             <div><span class="nombre" id="nombre-user"></span></div>
@@ -212,7 +212,7 @@
        
     </main>
     
-    <footer class="footer" id="footer" style="margin-top: 33%;">
+    <footer class="footer" id="footer" style="margin-top: 21% !important;">
         <div class="container">
             <h6 class="mb-0">@Libreta Virtual Todos los Derechos reservados | Equipo @ 2024</h6>
         </div>
